--- a/lp-neon/scss/_home.scss
+++ b/lp-neon/scss/_home.scss
@@ -71,20 +71,294 @@
         top: 4.1rem;
         left: 0;
         z-index: 2;
-        max-width: 43.5rem;
-        animation: floating 6s infinite;
+        /*max-width: 43.5rem;
+        animation: floating 6s infinite;*/
       }
       .card-back {
         bottom: 4.6rem;
         right: 8.6rem;
         z-index: 1;
-        max-width: 35.2rem;
-        animation: floating 8s infinite;
+        /*max-width: 35.2rem;
+        animation: floating 8s infinite;*/
       }
       .circle {
-        max-width: 55.3rem;
+        /*max-width: 55.3rem;*/
         top: 2.8rem;
         right: 4.3rem;
+      }
+    }
+  }
+}
+
+.s-card-neon {
+  padding-top: 12.9rem;
+  .container {
+    @include flex(row, flex-start, space-between);
+  }
+  .left-area {
+    width: 100%;
+    max-width: 27.7rem;
+    .ilustra-mockup {
+      position: relative;
+      width: 100%;
+      max-width: 27.7rem;
+      margin-bottom: 12.9rem;
+      .circle {
+        position: absolute;
+        top: 8.7rem;
+        left: -21.4rem;
+        max-width: 37.7rem;
+        z-index: -1;
+      }
+    }
+    .text {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      .icon {
+        position: relative;
+        &::before {
+          content: '';
+          width: 5px;
+          height: 83px;
+          background: url(../img/points.svg) no-repeat center center;
+          position: absolute;
+          top: -10.4rem;
+          left: 50%;
+          margin-left: -2.5px;
+        }
+      }
+      .info-txt {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        h3 {
+          text-align: center;
+          margin-top: 3.6rem;
+          color: $gray-600;
+        }
+        p {
+          text-align: center;
+          font-size: 16px;
+          line-height: 150%;
+          color: $gray-400;
+          opacity: 0.8;
+          margin-bottom: 2.6rem;
+        }
+        ul {
+          li {
+            &:not(:last-child) {
+              margin-bottom: 2.6rem;
+            }
+          }
+        }
+      }
+    }
+  }
+  .right-area {
+    width: 100%;
+    max-width: 80rem;
+    .main-text {
+      margin-bottom: 14.4rem;
+      h2 {
+        max-width: 48.8rem;
+        color: $gray-600;
+        margin-bottom: 4.9rem;
+      }
+      ul {
+        margin-bottom: 3.2rem;
+        li {
+          @include flex(row, center, space-between);
+          border-bottom: 1px solid rgba(225, 224, 231, 0.9);
+          padding: 3.3rem 0rem;
+          &:first-child {
+            padding-top: 0rem;
+          }
+          .info {
+            display: flex;
+            align-items: center;
+            .txt {
+              margin-left: 4.3rem;
+              h3 {
+                color: $gray-400;
+              }
+              p {
+                font-size: 1.8rem;
+                line-height: 150%;
+                color: #7a7786;
+              }
+            }
+          }
+        }
+      }
+      .btn {
+        position: relative;
+        display: inline-block;
+        font-family: 'Poppins', sans-serif;
+        font-weight: 500;
+        font-size: 1.6rem;
+        line-height: 112%;
+        letter-spacing: -0.5px;
+        color: $brand-blue;
+        &:after {
+          content: '';
+          position: absolute;
+          right: -1.8rem;
+          bottom: 0;
+          width: 1rem;
+          height: 3px;
+          background-color: $brand-yellow;
+        }
+      }
+    }
+    .box-card {
+      width: 100%;
+      height: 41rem;
+      background: url('../img/bg-box-card-neon.svg') no-repeat center center;
+      border-radius: 1.2rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding-left: 5.9rem;
+      .text {
+        width: 100%;
+        max-width: 38rem;
+        h2 {
+          color: #fff;
+          margin-bottom: 1.1rem;
+        }
+        h3 {
+          color: #fff;
+          max-width: 32.7rem;
+          margin-bottom: 0.8rem;
+        }
+        p {
+          font-size: 1.6rem;
+          line-height: 150%;
+          color: #fff;
+          margin-bottom: 3.1rem;
+        }
+        .btns {
+          display: flex;
+          align-items: center;
+          button {
+            &:not(:first-child) {
+              margin-left: 1.6rem;
+            }
+          }
+        }
+      }
+      .image {
+        margin-right: -3.1rem;
+      }
+    }
+  }
+}
+
+.s-depoimentos {
+  padding-top: 13.4rem;
+  .top {
+    @include flex(row, flex-end, space-between);
+    margin-bottom: 4rem;
+    h2 {
+      span {
+        display: block;
+        color: $gray-200;
+        margin-bottom: 1.4rem;
+      }
+    }
+    .swiper-pagination {
+      position: relative;
+      .swiper-pagination-bullet {
+        background: $brand-yellow;
+        opacity: 0.3;
+        border-radius: 1.2rem;
+        transition: all 0.3s;
+        &:not(:first-child) {
+          margin-left: 0.4rem;
+        }
+        &-active {
+          opacity: 1;
+          width: 2rem;
+        }
+      }
+      width: 8%; /*Adicionei isso pois o padrão width:100% fazia o span ficar quebrado*/
+    }
+  }
+  .slide-depoimentos {
+    overflow: hidden;
+  }
+}
+
+.s-conta-digital {
+  padding-top: 12.7rem;
+  padding-bottom: 8.5rem;
+  .container {
+    display: flex;
+    align-items: center;
+  }
+  .text {
+    max-width: 54.2rem;
+    h2 {
+      color: $gray-600;
+      margin-bottom: 4.5rem;
+      span {
+        display: block;
+        color: rgba(198, 197, 206, 0.8);
+        margin-bottom: 0.9rem;
+      }
+    }
+    ul {
+      margin-bottom: 6.1rem;
+      li {
+        display: flex;
+        align-items: center;
+        &:not(:last-child) {
+          margin-bottom: 4.5rem;
+        }
+        .icon {
+          width: 4.5rem;
+          height: 4.5rem;
+          background-color: $brand-green-light;
+          border-radius: 0.8rem;
+          @include flex(row, center, center);
+          margin-right: 2.6rem;
+        }
+        .info {
+          h4 {
+            margin-bottom: 0.4rem;
+            color: $gray-400;
+          }
+          p {
+            font-size: 1.8rem;
+            line-height: 150%;
+            color: $gray-300;
+          }
+        }
+      }
+    }
+  }
+  .image {
+    position: relative;
+    width: 100%;
+    max-width: 71.2rem;
+    height: 59.8rem;
+    margin-right: -3.8rem;
+    left: 12.5rem;
+    img {
+      position: absolute;
+      &.mockup-01 {
+        left: 0;
+        bottom: 4.7rem;
+      }
+      &.mockup-02 {
+        top: 3px;
+        left: 25.8rem;
+      }
+      &.circle {
+        right: 0;
+        bottom: 0;
       }
     }
   }
