--- a/lp-neon/scss/_home.scss
+++ b/lp-neon/scss/_home.scss
@@ -71,20 +71,169 @@
         top: 4.1rem;
         left: 0;
         z-index: 2;
-        /*max-width: 43.5rem;
-        animation: floating 6s infinite;*/
+        max-width: 43.5;
+        animation: floating 6s infinite;
       }
       .card-back {
         bottom: 4.6rem;
         right: 8.6rem;
         z-index: 1;
-        /*max-width: 35.2rem;
-        animation: floating 8s infinite;*/
+        max-width: 35.2rem;
+        animation: floating 8s infinite;
       }
       .circle {
-        /*max-width: 55.3rem;*/
+        max-width: 55.3rem;
         top: 2.8rem;
         right: 4.3rem;
+      }
+    }
+  }
+  @include responsive(1440px) {
+    .area-image {
+      margin-right: -13.4rem;
+    }
+  }
+  @include responsive(1366px) {
+    .area-image {
+      margin-right: -8rem;
+      .image {
+        .card-back {
+          right: 4rem;
+        }
+      }
+    }
+  }
+  @include responsive(1050px) {
+    padding-top: 14.5rem;
+    height: 65.6rem;
+    .text {
+      margin-top: 4.5rem;
+    }
+    .area-image {
+      margin-right: -10px;
+      h2 {
+        margin-bottom: 1.5rem;
+      }
+      .image {
+        height: 45rem;
+        .card-front {
+          max-width: 35rem;
+          top: 0;
+        }
+        .card-back {
+          max-width: 29rem;
+          bottom: 0;
+        }
+        .circle {
+          max-width: 46rem;
+        }
+      }
+    }
+  }
+  @include responsive(991px) {
+    height: 89.1rem;
+    background-size: cover;
+    .container {
+      flex-direction: column;
+      align-items: center;
+    }
+    .text {
+      margin-bottom: 5rem;
+      max-width: 68.5rem;
+      @include flex(column, center, center);
+      h3 {
+        text-align: center;
+      }
+      h1 {
+        text-align: center;
+        margin-bottom: 2.6rem;
+      }
+      ul {
+        margin-top: 3.9rem;
+      }
+    }
+    .area-image {
+      h2 {
+        margin-bottom: 1.9rem;
+      }
+      .image {
+        max-width: 51.1rem;
+        height: 42.4rem;
+        margin: 0 auto;
+        top: 0;
+        .circle {
+          max-width: 42.9rem;
+          top: 0;
+          right: 1.3rem;
+        }
+        .card-front {
+          max-width: 34rem;
+          left: 0;
+          top: 3.5rem;
+        }
+        .card-back {
+          max-width: 27.4rem;
+          right: 2.9rem;
+          bottom: 3.6rem;
+        }
+      }
+    }
+  }
+  @include responsive(480px) {
+    padding-top: 12.4rem;
+    height: 73.9rem;
+    .text {
+      h3 {
+        font-size: 1.6rem;
+        line-height: 120%;
+        margin-bottom: 1.5rem;
+      }
+      h1 {
+        font-size: 3.2rem;
+        line-height: 112%;
+        margin-bottom: 3.7rem;
+      }
+      ul {
+        flex-direction: column;
+        align-items: flex-start;
+        max-width: 26rem;
+        li {
+          &:not(:last-child) {
+            margin-bottom: 1.7rem;
+          }
+          .icon {
+            width: 2rem;
+            height: auto;
+            background-color: transparent;
+          }
+          span {
+            br {
+              display: none;
+            }
+          }
+        }
+      }
+    }
+    .area-image {
+      h2 {
+        display: none;
+      }
+      .image {
+        max-width: 30.5rem;
+        height: 24.8rem;
+        .circle {
+          max-width: 26.7rem;
+          right: 0;
+        }
+        .card-front {
+          max-width: 21.1rem;
+          top: 2.9rem;
+        }
+        .card-back {
+          max-width: 17rem;
+          bottom: 0;
+          right: 0.6rem;
+        }
       }
     }
   }
@@ -254,6 +403,193 @@
       }
     }
   }
+  @include responsive(1200px) {
+    .left-area {
+      .ilustra-mockup {
+        .circle {
+          display: none;
+        }
+      }
+    }
+    .right-area {
+      max-width: 73rem;
+      .main-text {
+        ul {
+          li {
+            .info {
+              .txt {
+                margin-left: 2rem;
+              }
+            }
+          }
+        }
+      }
+      .box-card {
+        padding-left: 3.5rem;
+        .image {
+          margin-right: -1rem;
+        }
+      }
+    }
+  }
+  @include responsive(991px) {
+    .container {
+      flex-direction: column-reverse;
+    }
+    .left-area {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      max-width: 61rem;
+      margin: 0 auto;
+      .ilustra-mockup {
+        max-width: 25.5rem;
+        margin-bottom: 0;
+      }
+      .text {
+        max-width: 27rem;
+      }
+    }
+    .right-area {
+      max-width: 100%;
+      margin-bottom: 9.8rem;
+      .main-text {
+        margin-bottom: 5.7rem;
+        h2 {
+          text-align: center;
+          margin: 0 auto;
+          margin-bottom: 5.3rem;
+          font-size: 3.6rem;
+        }
+        .btn {
+          display: block;
+          text-align: center;
+          &:after {
+            display: none;
+          }
+        }
+      }
+      .box-card {
+        max-width: 94.7%;
+        .image {
+          margin-right: -4rem;
+        }
+      }
+    }
+  }
+  @include responsive(600px) {
+    padding-top: 21.9rem;
+    .right-area {
+      .box-card {
+        max-width: 100%;
+        height: 47rem;
+        background-size: cover;
+        flex-direction: column;
+        padding-top: 4.3rem;
+        padding-left: 0;
+        margin-bottom: 4rem;
+        .image {
+          margin-right: 0;
+        }
+        .text {
+          max-width: 90%;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          margin-bottom: 3rem;
+          h3 {
+            text-align: center;
+          }
+          p {
+            text-align: center;
+          }
+        }
+      }
+    }
+  }
+  @include responsive(480px) {
+    position: relative;
+    padding-top: 13.6rem;
+    &:after {
+      content: '';
+      width: 100%;
+      height: 21.4rem;
+      background: linear-gradient(
+        180deg,
+        #f7f7fa 0%,
+        rgba(247, -247, -250, -0) 100%
+      );
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      z-index: -1;
+      transform: matrix(1, 0, 0, -1, 0, 0);
+    }
+    .left-area {
+      flex-direction: column-reverse;
+      .text {
+        margin-bottom: 4rem;
+        .icon {
+          &:before {
+            display: none;
+          }
+        }
+      }
+      .ilustra-mockup {
+        height: 39.7rem;
+        overflow: hidden;
+      }
+    }
+    .right-area {
+      margin-bottom: 6.7rem;
+      .main-text {
+        h2 {
+          font-size: 2.8rem;
+          margin-bottom: 3.7rem;
+        }
+        ul {
+          li {
+            padding: 2.8rem 0;
+            .info {
+              align-items: flex-start;
+              .txt {
+                max-width: 71%;
+                h3 {
+                  font-size: 2rem;
+                }
+                P {
+                  font-size: 1.4rem;
+                }
+              }
+            }
+          }
+        }
+      }
+      .box-card {
+        h2 {
+          font-weight: 600;
+          font-size: 2.8rem;
+        }
+        h3 {
+          font-size: 2rem;
+        }
+        .text {
+          p {
+            max-width: 25.3rem;
+            margin-bottom: 3.4rem;
+          }
+          .btns {
+            .btn-primary {
+              padding: 0 3rem;
+            }
+          }
+        }
+        .image {
+          max-width: 27.7rem;
+        }
+      }
+    }
+  }
 }
 
 .s-depoimentos {
@@ -288,6 +624,41 @@
   }
   .slide-depoimentos {
     overflow: hidden;
+  }
+  @include responsive(991px) {
+    .top {
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 5.1rem;
+      h2 {
+        text-align: center;
+        margin-bottom: 5.1rem;
+      }
+    }
+  }
+  @include responsive(480px) {
+    padding-top: 7.6rem;
+    .container {
+      padding: 0;
+    }
+    .top {
+      margin-bottom: 3.4rem;
+      h2 {
+        font-size: 2.8rem;
+        font-weight: 600;
+        max-width: 28.5rem;
+        margin-bottom: 3.4rem;
+        span {
+          margin-bottom: 1.1rem;
+        }
+      }
+      .swiper-pagination {
+        width: 25%;
+      }
+    }
+    .slide-depoimentos {
+      padding: 0px 2rem;
+    }
   }
 }
 
@@ -351,15 +722,133 @@
       &.mockup-01 {
         left: 0;
         bottom: 4.7rem;
+        z-index: 2;
       }
       &.mockup-02 {
         top: 3px;
         left: 25.8rem;
+        z-index: 2;
       }
       &.circle {
         right: 0;
         bottom: 0;
+        z-index: 0;
       }
     }
+  }
+  @include responsive(1200px) {
+    .container {
+      flex-direction: column;
+      align-items: center;
+    }
+    .text {
+      max-width: 75%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      h2 {
+        text-align: center;
+        max-width: 80%;
+      }
+    }
+    .image {
+      margin-right: 0;
+      left: 0;
+      margin-top: 5rem;
+    }
+  }
+  @include responsive(900px) {
+    padding-top: 8.6rem;
+    padding-bottom: 8.1rem;
+    .text {
+      max-width: 100%;
+    }
+    .image {
+      max-width: 58.2rem;
+      height: 63.3rem;
+      img {
+        &.circle {
+          width: 100%;
+        }
+        &.mockup-01 {
+          z-index: 2;
+        }
+        &.mockup-02 {
+          z-index: 2;
+        }
+      }
+    }
+  }
+  @include responsive(480px) {
+    padding-top: 5.7rem;
+    padding-bottom: 7.2rem;
+    .text {
+      h2 {
+        font-size: 2.6rem;
+        font-weight: 600;
+        max-width: 100%;
+        margin-bottom: 3.9rem;
+        span {
+          font-size: 2.4rem;
+        }
+      }
+      ul {
+        margin-bottom: 4.4rem;
+        li {
+          flex-direction: column;
+          align-items: center;
+          &:not(:last-child) {
+            margin-bottom: 5.6rem;
+          }
+          .icon {
+            margin-right: 0;
+            margin-bottom: 1.6rem;
+          }
+          .info {
+            h4 {
+              text-align: center;
+              max-width: 28rem;
+            }
+            p {
+              text-align: center;
+              font-size: 1.4rem;
+              max-width: 21rem;
+              margin: 0 auto;
+            }
+          }
+        }
+      }
+    }
+    .image {
+      max-width: 35.7rem;
+      height: 46.9rem;
+      img {
+        &.mockup-01,
+        &.mockup-02 {
+          max-width: 16.8rem;
+        }
+        &.mockup-01 {
+          bottom: initial;
+          top: 5.8rem;
+        }
+        &.mockup-02 {
+          left: initial;
+          right: 0;
+          top: 0;
+        }
+      }
+    }
+  }
+}
+
+@keyframes floating {
+  0% {
+    transform: translateY(0);
+  }
+  66% {
+    transform: translateY(-15px);
+  }
+  100% {
+    transform: translateY(0);
   }
 }
